# Pachyterm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
examples/: config_demo.rs  tty_demo.rs
specs/: P0-001_dual_render_back_ends.md  P0-002_tmux_compatible_multiplexer.md  P0-003_oci_crun_session_launcher.md  P0-004_shared_memory_buffers_api.md  P0-005_os_awareness_agent.md  P0-006_privacy_and_telemetry.md  P0-007_minimal_config_and_auto_theme.md  P1-008_image_media_display.md  P1-009_model_hot_swap_vram_arbitration.md  P1-010_extensible_agent_api.md  P2-011_macos_metal_backend.md  P2-012_enhanced_font_ligature_system.md  dependency-analysis.md  index-prd.md  pachyterm_ots.json  priority-mapping.md  tool-specs.md
specs/agent-subsystem/: command-parser-prd.md  model-host-prd.md  streaming-ui-prd.md
specs/config-state/: plain-text-config-prd.md  profile-cache-prd.md
specs/core-runtime/: input-keymap-prd.md  renderer-prd.md  tty-engine-prd.md
specs/distribution-operations/: installer-prd.md  security-prd.md  telemetry-prd.md
specs/extensibility/: plugin-sdk-prd.md
src/: config.rs  lib.rs  tty.rs
