[package]
name = "pachyterm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml_edit = "0.22"
notify = "6.1"
thiserror = "1.0"
dirs = "5.0"
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process", "term", "fs", "ioctl"] }
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "config_bench"
harness = false
